rf(UI): removed tailwind dev cdn -> Not to be used in production warning

--- a/assets/ui.html
+++ b/assets/ui.html
@@ -8,7 +8,8 @@
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v6.1.1/css/pro.min.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" type="text/css" href="css/tailwind-all.min.css" />
 </head>
 
 <body>
